All elements and constraints added for home view controller for Compact/Regular. No issues at this time.

--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -25,45 +25,45 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuh-fk-EpA">
-                                <rect key="frame" x="165" y="737.5" width="82.5" height="30"/>
+                                <rect key="frame" x="9.6666666666666643" y="207" width="84.333333333333343" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VB9-O7-z6v">
-                                <rect key="frame" x="165" y="839.5" width="74" height="30"/>
+                                <rect key="frame" x="9.6666666666666643" y="309" width="74" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lk8-TG-cp1">
-                                <rect key="frame" x="293" y="737" width="438" height="30"/>
+                                <rect key="frame" x="129" y="207" width="156.33333333333331" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eyi-cc-m5W">
-                                <rect key="frame" x="487.5" y="901" width="49" height="30"/>
+                                <rect key="frame" x="182.66666666666666" y="371" width="49" height="30"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="homeSubmitAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hba-js-Fy7"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XS4-av-TcI">
-                                <rect key="frame" x="293" y="839" width="438" height="30"/>
+                                <rect key="frame" x="128.66666666666669" y="309" width="156.66666666666669" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wuj-2V-2BU">
-                                <rect key="frame" x="494" y="1316" width="36" height="30"/>
+                                <rect key="frame" x="189" y="686" width="36" height="30"/>
                                 <state key="normal" title="Tutor"/>
                                 <connections>
                                     <segue destination="Frx-ti-e6h" kind="presentation" id="7NL-jI-JOd"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8P5-zU-LBe">
-                                <rect key="frame" x="485" y="1271" width="55" height="30"/>
+                                <rect key="frame" x="179.66666666666666" y="641" width="55" height="30"/>
                                 <state key="normal" title="Student"/>
                                 <connections>
                                     <segue destination="LI1-V0-VG9" kind="presentation" id="TyN-hs-RTs"/>
@@ -73,10 +73,14 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="VB9-O7-z6v" firstAttribute="leading" secondItem="vuh-fk-EpA" secondAttribute="leading" id="0QQ-nn-Tc3"/>
-                            <constraint firstItem="Lk8-TG-cp1" firstAttribute="leading" secondItem="vuh-fk-EpA" secondAttribute="trailing" constant="45" id="4Oe-GI-1Vn"/>
+                            <constraint firstItem="Lk8-TG-cp1" firstAttribute="leading" secondItem="vuh-fk-EpA" secondAttribute="trailing" constant="45" id="4Oe-GI-1Vn">
+                                <variation key="heightClass=regular-widthClass=compact" constant="35"/>
+                            </constraint>
                             <constraint firstItem="XS4-av-TcI" firstAttribute="width" secondItem="Lk8-TG-cp1" secondAttribute="width" id="8Xg-SN-VNh"/>
                             <constraint firstItem="VB9-O7-z6v" firstAttribute="centerY" secondItem="XS4-av-TcI" secondAttribute="centerY" id="Elz-Za-Dgs"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="XS4-av-TcI" secondAttribute="trailing" multiplier="1.1" constant="200" id="FwK-8p-EGO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XS4-av-TcI" secondAttribute="trailing" multiplier="1.1" constant="200" id="FwK-8p-EGO">
+                                <variation key="heightClass=regular-widthClass=compact" constant="80"/>
+                            </constraint>
                             <constraint firstItem="XS4-av-TcI" firstAttribute="top" secondItem="Lk8-TG-cp1" secondAttribute="bottom" constant="72" id="ITT-ZM-CbG"/>
                             <constraint firstItem="vuh-fk-EpA" firstAttribute="height" secondItem="Lk8-TG-cp1" secondAttribute="height" id="Lrb-m8-ov8"/>
                             <constraint firstItem="Eyi-cc-m5W" firstAttribute="top" secondItem="XS4-av-TcI" secondAttribute="bottom" constant="32" id="MGe-jL-IVf"/>
@@ -85,7 +89,9 @@
                             <constraint firstItem="VB9-O7-z6v" firstAttribute="height" secondItem="XS4-av-TcI" secondAttribute="height" id="To7-5V-xvt"/>
                             <constraint firstItem="Lk8-TG-cp1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wkv-NU-iR9"/>
                             <constraint firstItem="XS4-av-TcI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VB9-O7-z6v" secondAttribute="trailing" constant="45" id="dDe-6A-ehj"/>
-                            <constraint firstItem="8P5-zU-LBe" firstAttribute="top" secondItem="Eyi-cc-m5W" secondAttribute="bottom" constant="340" id="giC-22-LXl"/>
+                            <constraint firstItem="8P5-zU-LBe" firstAttribute="top" secondItem="Eyi-cc-m5W" secondAttribute="bottom" constant="340" id="giC-22-LXl">
+                                <variation key="heightClass=regular-widthClass=compact" constant="240"/>
+                            </constraint>
                             <constraint firstItem="vuh-fk-EpA" firstAttribute="centerY" secondItem="Lk8-TG-cp1" secondAttribute="centerY" id="iKK-NL-clf"/>
                             <constraint firstItem="8P5-zU-LBe" firstAttribute="centerX" secondItem="Wuj-2V-2BU" secondAttribute="centerX" id="lC2-3d-egY"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Wuj-2V-2BU" secondAttribute="bottom" constant="20" id="uN6-D2-kY2"/>
@@ -122,6 +128,38 @@
                                 <exclude reference="lC2-3d-egY"/>
                                 <exclude reference="Qk4-rq-OnE"/>
                                 <exclude reference="vND-Vu-reI"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="vuh-fk-EpA"/>
+                                <include reference="VB9-O7-z6v"/>
+                                <include reference="Lk8-TG-cp1"/>
+                                <include reference="Eyi-cc-m5W"/>
+                                <include reference="XS4-av-TcI"/>
+                                <include reference="Wuj-2V-2BU"/>
+                                <include reference="8P5-zU-LBe"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="uN6-D2-kY2"/>
+                                <include reference="Lrb-m8-ov8"/>
+                                <include reference="iKK-NL-clf"/>
+                                <include reference="4Oe-GI-1Vn"/>
+                                <include reference="Wkv-NU-iR9"/>
+                                <include reference="0QQ-nn-Tc3"/>
+                                <include reference="Elz-Za-Dgs"/>
+                                <include reference="To7-5V-xvt"/>
+                                <include reference="8Xg-SN-VNh"/>
+                                <include reference="FwK-8p-EGO"/>
+                                <include reference="ITT-ZM-CbG"/>
+                                <include reference="dDe-6A-ehj"/>
+                                <include reference="vWI-hP-siY"/>
+                                <include reference="MGe-jL-IVf"/>
+                                <include reference="Tmj-Hk-X9X"/>
+                                <include reference="giC-22-LXl"/>
+                                <include reference="lC2-3d-egY"/>
+                                <include reference="Qk4-rq-OnE"/>
+                                <include reference="vND-Vu-reI"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
@@ -817,7 +855,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="ILt-lT-fRK"/>
+        <segue reference="7NL-jI-JOd"/>
         <segue reference="TyN-hs-RTs"/>
     </inferredMetricsTieBreakers>
 </document>
