All elements and constraints added for student session sign up view controller for Compact/Regular.

--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -25,13 +25,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vuh-fk-EpA">
-                                <rect key="frame" x="9.6666666666666643" y="207" width="84.333333333333343" height="30"/>
+                                <rect key="frame" x="14.666666666666664" y="207" width="84.333333333333343" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VB9-O7-z6v">
-                                <rect key="frame" x="9.6666666666666643" y="309" width="74" height="30"/>
+                                <rect key="frame" x="14.666666666666664" y="309" width="74" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -74,7 +74,7 @@
                         <constraints>
                             <constraint firstItem="VB9-O7-z6v" firstAttribute="leading" secondItem="vuh-fk-EpA" secondAttribute="leading" id="0QQ-nn-Tc3"/>
                             <constraint firstItem="Lk8-TG-cp1" firstAttribute="leading" secondItem="vuh-fk-EpA" secondAttribute="trailing" constant="45" id="4Oe-GI-1Vn">
-                                <variation key="heightClass=regular-widthClass=compact" constant="35"/>
+                                <variation key="heightClass=regular-widthClass=compact" constant="30"/>
                             </constraint>
                             <constraint firstItem="XS4-av-TcI" firstAttribute="width" secondItem="Lk8-TG-cp1" secondAttribute="width" id="8Xg-SN-VNh"/>
                             <constraint firstItem="VB9-O7-z6v" firstAttribute="centerY" secondItem="XS4-av-TcI" secondAttribute="centerY" id="Elz-Za-Dgs"/>
@@ -88,7 +88,9 @@
                             <constraint firstItem="Eyi-cc-m5W" firstAttribute="centerX" secondItem="XS4-av-TcI" secondAttribute="centerX" id="Tmj-Hk-X9X"/>
                             <constraint firstItem="VB9-O7-z6v" firstAttribute="height" secondItem="XS4-av-TcI" secondAttribute="height" id="To7-5V-xvt"/>
                             <constraint firstItem="Lk8-TG-cp1" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Wkv-NU-iR9"/>
-                            <constraint firstItem="XS4-av-TcI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VB9-O7-z6v" secondAttribute="trailing" constant="45" id="dDe-6A-ehj"/>
+                            <constraint firstItem="XS4-av-TcI" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VB9-O7-z6v" secondAttribute="trailing" constant="45" id="dDe-6A-ehj">
+                                <variation key="heightClass=regular-widthClass=compact" constant="40"/>
+                            </constraint>
                             <constraint firstItem="8P5-zU-LBe" firstAttribute="top" secondItem="Eyi-cc-m5W" secondAttribute="bottom" constant="340" id="giC-22-LXl">
                                 <variation key="heightClass=regular-widthClass=compact" constant="240"/>
                             </constraint>
@@ -218,26 +220,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M2S-Df-CVS">
-                                <rect key="frame" x="293" y="839" width="438" height="30"/>
+                                <rect key="frame" x="128.66666666666669" y="209" width="156.66666666666669" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfL-Bz-nkg">
-                                <rect key="frame" x="145" y="839.5" width="81" height="30"/>
+                                <rect key="frame" x="17.666666666666671" y="209" width="81" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CJJ-cH-Nf5">
-                                <rect key="frame" x="497" y="1316" width="30" height="30"/>
+                                <rect key="frame" x="192" y="686" width="30" height="30"/>
                                 <state key="normal" title="Exit"/>
                                 <connections>
                                     <action selector="studentSessionExitAction:" destination="9KN-Cl-dz1" eventType="touchUpInside" id="fUy-11-SE2"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cFx-Vu-iVa">
-                                <rect key="frame" x="487.5" y="889" width="49" height="30"/>
+                                <rect key="frame" x="182.66666666666666" y="259" width="49" height="30"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <segue destination="hKQ-ak-qLP" kind="presentation" id="2gV-si-XbN"/>
@@ -247,13 +249,17 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="M2S-Df-CVS" firstAttribute="centerX" secondItem="0a2-OZ-3yU" secondAttribute="centerX" id="5nw-cL-Q5v"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="M2S-Df-CVS" secondAttribute="trailing" multiplier="1.1" constant="200" id="Cud-yK-3Zb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="M2S-Df-CVS" secondAttribute="trailing" multiplier="1.1" constant="200" id="Cud-yK-3Zb">
+                                <variation key="heightClass=regular-widthClass=compact" constant="80"/>
+                            </constraint>
                             <constraint firstItem="CJJ-cH-Nf5" firstAttribute="centerX" secondItem="0a2-OZ-3yU" secondAttribute="centerX" id="FKJ-ZM-dfW"/>
                             <constraint firstItem="nfL-Bz-nkg" firstAttribute="centerY" secondItem="M2S-Df-CVS" secondAttribute="centerY" id="IIA-Aw-yiD"/>
                             <constraint firstItem="CJJ-cH-Nf5" firstAttribute="top" secondItem="cFx-Vu-iVa" secondAttribute="bottom" constant="397" id="Rnh-m3-CPO"/>
                             <constraint firstItem="nfL-Bz-nkg" firstAttribute="height" secondItem="M2S-Df-CVS" secondAttribute="height" id="TVD-lu-3o8"/>
                             <constraint firstItem="cFx-Vu-iVa" firstAttribute="top" secondItem="M2S-Df-CVS" secondAttribute="bottom" constant="20" id="ULB-ca-MXp"/>
-                            <constraint firstItem="M2S-Df-CVS" firstAttribute="leading" secondItem="nfL-Bz-nkg" secondAttribute="trailing" constant="67.5" id="hQM-tZ-ecQ"/>
+                            <constraint firstItem="M2S-Df-CVS" firstAttribute="leading" secondItem="nfL-Bz-nkg" secondAttribute="trailing" constant="67.5" id="hQM-tZ-ecQ">
+                                <variation key="heightClass=regular-widthClass=compact" constant="30"/>
+                            </constraint>
                             <constraint firstItem="cFx-Vu-iVa" firstAttribute="centerX" secondItem="0a2-OZ-3yU" secondAttribute="centerX" id="hb0-Pp-9M3"/>
                             <constraint firstItem="WLW-8S-Lwr" firstAttribute="top" secondItem="CJJ-cH-Nf5" secondAttribute="bottom" constant="20" id="sHv-3h-l1O"/>
                         </constraints>
@@ -275,6 +281,26 @@
                                 <exclude reference="hb0-Pp-9M3"/>
                                 <exclude reference="FKJ-ZM-dfW"/>
                                 <exclude reference="Rnh-m3-CPO"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="M2S-Df-CVS"/>
+                                <include reference="nfL-Bz-nkg"/>
+                                <include reference="CJJ-cH-Nf5"/>
+                                <include reference="cFx-Vu-iVa"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="sHv-3h-l1O"/>
+                                <include reference="IIA-Aw-yiD"/>
+                                <include reference="TVD-lu-3o8"/>
+                                <include reference="5nw-cL-Q5v"/>
+                                <include reference="Cud-yK-3Zb"/>
+                                <include reference="hQM-tZ-ecQ"/>
+                                <include reference="ULB-ca-MXp"/>
+                                <include reference="hb0-Pp-9M3"/>
+                                <include reference="FKJ-ZM-dfW"/>
+                                <include reference="Rnh-m3-CPO"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
