--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -350,27 +350,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lectures" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k4U-fI-h3g">
-                                <rect key="frame" x="462" y="72" width="100" height="31.666666666666671"/>
+                                <rect key="frame" x="157" y="72" width="100" height="31.666666666666671"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ze9-Kv-99y">
-                                <rect key="frame" x="496" y="1316" width="32" height="30"/>
+                                <rect key="frame" x="191" y="686" width="32" height="30"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <segue destination="JDS-L0-m48" kind="presentation" id="ixA-GI-KnS"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="87X-hu-TZP">
-                                <rect key="frame" x="489" y="1230" width="46" height="30"/>
+                                <rect key="frame" x="184" y="600" width="46" height="30"/>
                                 <state key="normal" title="Create"/>
                                 <connections>
                                     <action selector="tutorLecturesCreateAction:" destination="ufv-Nf-glt" eventType="touchUpInside" id="JyN-5a-k9t"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jfw-Cq-4q7">
-                                <rect key="frame" x="497" y="1158" width="30" height="30"/>
+                                <rect key="frame" x="192" y="528" width="30" height="30"/>
                                 <state key="normal" title="Exit"/>
                                 <connections>
                                     <action selector="tutorsLecturesExitAction:" destination="ufv-Nf-glt" eventType="touchUpInside" id="igf-AH-IOK"/>
@@ -405,6 +405,24 @@
                                 <exclude reference="yUM-Hz-qFN"/>
                                 <exclude reference="Qgs-zL-VKh"/>
                                 <exclude reference="RsL-8K-w16"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="k4U-fI-h3g"/>
+                                <include reference="ze9-Kv-99y"/>
+                                <include reference="87X-hu-TZP"/>
+                                <include reference="jfw-Cq-4q7"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="CDj-rl-Hph"/>
+                                <include reference="KWb-fz-ooJ"/>
+                                <include reference="v73-KB-dZP"/>
+                                <include reference="Z66-88-YZo"/>
+                                <include reference="hau-6f-XLv"/>
+                                <include reference="yUM-Hz-qFN"/>
+                                <include reference="Qgs-zL-VKh"/>
+                                <include reference="RsL-8K-w16"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
