--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -467,13 +467,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oNZ-Fx-ONu">
-                                <rect key="frame" x="416.66666666666663" y="72" width="190.99999999999989" height="36"/>
+                                <rect key="frame" x="111.66666666666669" y="72" width="191" height="36"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ceH-ta-EXD">
-                                <rect key="frame" x="496" y="1328" width="32" height="30"/>
+                                <rect key="frame" x="191" y="698" width="32" height="30"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="tutorStatusNextAction:" destination="9xR-Xk-1pM" eventType="touchUpInside" id="OIv-Ul-44q"/>
@@ -481,19 +481,19 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="abc123" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ksS-U0-7ll">
-                                <rect key="frame" x="484" y="681" width="56" height="21"/>
+                                <rect key="frame" x="179" y="581" width="56" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Session ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9sc-53-QqN">
-                                <rect key="frame" x="472" y="652" width="81" height="21"/>
+                                <rect key="frame" x="167" y="552" width="81" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aDI-Th-5Gt">
-                                <rect key="frame" x="474" y="522" width="76" height="21"/>
+                                <rect key="frame" x="169" y="422" width="76" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -515,7 +515,9 @@
                         <constraints>
                             <constraint firstItem="ksS-U0-7ll" firstAttribute="centerX" secondItem="9sc-53-QqN" secondAttribute="centerX" id="7TU-c2-Fce"/>
                             <constraint firstAttribute="leadingMargin" secondItem="SC9-bp-fIm" secondAttribute="leading" id="7eL-Ve-WSF"/>
-                            <constraint firstItem="aDI-Th-5Gt" firstAttribute="top" secondItem="oNZ-Fx-ONu" secondAttribute="bottom" constant="414" id="D6W-6W-Vwi"/>
+                            <constraint firstItem="aDI-Th-5Gt" firstAttribute="top" secondItem="oNZ-Fx-ONu" secondAttribute="bottom" constant="414" id="D6W-6W-Vwi">
+                                <variation key="heightClass=regular-widthClass=compact" constant="314"/>
+                            </constraint>
                             <constraint firstItem="9sc-53-QqN" firstAttribute="top" secondItem="aDI-Th-5Gt" secondAttribute="bottom" constant="109" id="DfX-My-VC3"/>
                             <constraint firstItem="SC9-bp-fIm" firstAttribute="top" secondItem="oNZ-Fx-ONu" secondAttribute="bottom" constant="39" id="GbK-M7-qBF"/>
                             <constraint firstItem="9sc-53-QqN" firstAttribute="centerX" secondItem="aDI-Th-5Gt" secondAttribute="centerX" id="OsH-g7-Rqh"/>
@@ -553,6 +555,33 @@
                                 <exclude reference="7TU-c2-Fce"/>
                                 <exclude reference="eZb-JE-mkH"/>
                                 <exclude reference="vqb-zq-3EM"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="oNZ-Fx-ONu"/>
+                                <include reference="ceH-ta-EXD"/>
+                                <include reference="ksS-U0-7ll"/>
+                                <include reference="9sc-53-QqN"/>
+                                <include reference="aDI-Th-5Gt"/>
+                                <include reference="SC9-bp-fIm"/>
+                                <include reference="5sU-Xq-Ohq"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="zkX-ap-zkR"/>
+                                <include reference="7eL-Ve-WSF"/>
+                                <include reference="GbK-M7-qBF"/>
+                                <include reference="b8D-CZ-5lG"/>
+                                <include reference="e4I-A6-rFO"/>
+                                <include reference="j2L-UE-Nh4"/>
+                                <include reference="ooL-Fh-w7u"/>
+                                <include reference="D6W-6W-Vwi"/>
+                                <include reference="Y2g-bz-AYH"/>
+                                <include reference="DfX-My-VC3"/>
+                                <include reference="OsH-g7-Rqh"/>
+                                <include reference="7TU-c2-Fce"/>
+                                <include reference="eZb-JE-mkH"/>
+                                <include reference="vqb-zq-3EM"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
