--- a/Live Lecture Feedback/Base.lproj/Main.storyboard
+++ b/Live Lecture Feedback/Base.lproj/Main.storyboard
@@ -637,7 +637,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gHy-Vc-WrH">
-                                <rect key="frame" x="491.66666666666663" y="1316" width="40.999999999999886" height="30"/>
+                                <rect key="frame" x="186.66666666666663" y="686" width="41" height="30"/>
                                 <state key="normal" title="Home"/>
                                 <connections>
                                     <action selector="tutorReveiwHomeAction:" destination="bF1-AN-DLT" eventType="touchUpInside" id="XvV-E6-2mo"/>
@@ -657,6 +657,15 @@
                             <mask key="constraints">
                                 <exclude reference="a5Z-iK-MNB"/>
                                 <exclude reference="whs-fb-rA2"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="gHy-Vc-WrH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="a5Z-iK-MNB"/>
+                                <include reference="whs-fb-rA2"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=regular">
